@@ -1,3 +1,7 @@
+2002-01-14  Bradford Hovinen  <hovinen@ximian.com>
+
+	* Makefile.am: Update
+
 2002-01-04  Bradford Hovinen  <hovinen@ximian.com>
 
 	* control/Makefile.am (gnome_theme_preview_LDADD): Use
